force-app/main/default/objects/JBCXM__SurveyQuestion__c/JBCXM__SurveyQuestion__c.object-meta.xml
<CustomObject>
    <description>This is used to store questions of survey</description>
    <label>Survey Question</label>
    <nameField>
        <displayFormat>SuQ-{00000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Question</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>