force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__AllowCaption__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AllowCaption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Caption</label>
    <type>Checkbox</type>
</CustomField>