force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__AllowHeaderGrouping__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AllowHeaderGrouping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to enable header grouping for question type of Matrix,and NPS</description>
    <label>AllowHeaderGrouping</label>
    <type>Checkbox</type>
</CustomField>