force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__Brand__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NPS</fullName>
            </value>
            <value>
                <fullName>CXPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>