force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__Caption__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Caption__c</fullName>
    <label>Caption</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>