force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__ClonedFrom__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ClonedFrom__c</fullName>
    <label>ClonedFrom</label>
    <length>80</length>
    <type>Text</type>
</CustomField>