force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__Code__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Code__c</fullName>
    <label>Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>