force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__DataType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DataType__c</fullName>
    <label>DataType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>