force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__Dependent__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Dependent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to identify whether this question is dependent question  or not</description>
    <label>Dependent</label>
    <type>Checkbox</type>
</CustomField>