force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__GroupHeaderType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GroupHeaderType__c</fullName>
    <description>This is used to see the type of grouping done at header label either by text or icon</description>
    <label>GroupHeaderType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Icon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>