force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__HasPageBreak__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__HasPageBreak__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Page Break</label>
    <type>Checkbox</type>
</CustomField>