force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__HasRules__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__HasRules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the flag which checks whether it has any logic rules associated.</description>
    <label>HasRules</label>
    <type>Checkbox</type>
</CustomField>