force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__HelpText__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__HelpText__c</fullName>
    <label>Help Text</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>