force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__Image__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Image__c</fullName>
    <description>Help Image</description>
    <label>Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>