force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__IsInternal__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsInternal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is internal</label>
    <type>Checkbox</type>
</CustomField>