force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__IsRequired__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsRequired__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>