force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__Language__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Language__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Language Code</description>
    <label>Language</label>
    <referenceTo>JBCXM__GSLanguage__c</referenceTo>
    <relationshipLabel>Survey Question Language</relationshipLabel>
    <relationshipName>QuestionLanguage</relationshipName>
    <type>Lookup</type>
</CustomField>