force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__LibQuestion__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LibQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Library Question Lookup</description>
    <label>Library Question</label>
    <referenceTo>JBCXM__SurveyQuestion__c</referenceTo>
    <relationshipLabel>Survey Question (Library Question)</relationshipLabel>
    <relationshipName>Survey_Question</relationshipName>
    <type>Lookup</type>
</CustomField>