force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__PageInfo__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PageInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup on PageInfo</description>
    <label>PageInfo</label>
    <referenceTo>JBCXM__PageInfo__c</referenceTo>
    <relationshipLabel>Survey Question</relationshipLabel>
    <relationshipName>Survey_Question</relationshipName>
    <type>Lookup</type>
</CustomField>