force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__ParentQuestion__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ParentQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Question</label>
    <referenceTo>JBCXM__SurveyQuestion__c</referenceTo>
    <relationshipLabel>Survey Question</relationshipLabel>
    <relationshipName>Parent_Question</relationshipName>
    <type>Lookup</type>
</CustomField>