force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__Rating__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Rating__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Maximum number of stars user can assign for rating type question.</description>
    <inlineHelpText>Maximum number of stars user can assign for rating type question.</inlineHelpText>
    <label>Rating stars count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>