force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__ReportingLabel__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ReportingLabel__c</fullName>
    <label>Reporting Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>