force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__ShowNeutral__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ShowNeutral__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Neutral</label>
    <type>Checkbox</type>
</CustomField>