force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__SurveyMaster__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SurveyMaster__c</fullName>
    <label>SurveyMaster</label>
    <referenceTo>JBCXM__Survey__c</referenceTo>
    <relationshipLabel>Survey Question</relationshipLabel>
    <relationshipName>Survey_Question</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>