force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__Title__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Title__c</fullName>
    <label>Title</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>