force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__TranslationFor__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TranslationFor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Translation For</label>
    <referenceTo>JBCXM__SurveyQuestion__c</referenceTo>
    <relationshipLabel>Translated Question</relationshipLabel>
    <relationshipName>TranslatedQuestion</relationshipName>
    <type>Lookup</type>
</CustomField>