force-app/main/default/objects/JBCXM__SurveyQuestion__c/fields/JBCXM__UserResponseCount__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UserResponseCount__c</fullName>
    <inlineHelpText>This field is updated through Apex after each response.</inlineHelpText>
    <label>User Response Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>